--- a/jokerbet303/index.html
+++ b/jokerbet303/index.html
@@ -1378,14 +1378,14 @@ Item added to your cart
       <product-info
         id="ProductInfo-template--14978539683909__main"
         data-section="template--14978539683909__main"
-        data-url="/papua4d.jmarchini.org"
+        data-url="/jokerbet303.jmarchini.org"
         class="product__info-container product__column-sticky"
       ><p
                 class="product__text inline-richtext caption-with-letter-spacing"
                 
               ><STRONG>JOKERBET303</STRONG></p><div class="product__title" >
                 <h1>JOKERBET303 Situs Jokerbet Slot Online Joker Bet 303 Terpercaya 2024</h1>
-                <a href="/papua4d.jmarchini.org" class="product__title">
+                <a href="/jokerbet303.jmarchini.org" class="product__title">
                   <h2 class="h1">
                     JOKERBET303 Situs Jokerbet Slot Online Joker Bet 303 Terpercaya 2024
                   </h2>
@@ -1488,7 +1488,7 @@ Item added to your cart
                   </span>
                 </label>
                 <div class="price-per-item__container">
-                  <quantity-input class="quantity" data-url="/papua4d.jmarchini.org/" data-section="template--14978539683909__main">
+                  <quantity-input class="quantity" data-url="/jokerbet303.jmarchini.org/" data-section="template--14978539683909__main">
                     <button class="quantity__button no-js-hidden" name="minus" type="button">
                       <span class="visually-hidden">Decrease quantity for JOKERBET303 Situs Jokerbet Slot Online Joker Bet 303 Terpercaya 2024</span>
                       <svg
@@ -1620,8 +1620,8 @@ Item added to your cart
     <script src="//pastijp.santambroeus.com/cdn/shop/t/1/assets/pickup-availability.js?v=66138958121968076331701580038" defer="defer"></script></div>
 <div class="product__description rte quick-add-hidden" >
 <p><a href="https://sdfx.xyz/zra/jokerbet/"><img src="https://youris.pro/img/Daftar1.gif"></a></p>
-                  <p><Strong><a href="http://go.id.zra.com/jokerbet303/">Jokerbet303</a></Strong> adalah situs slot online terlengkap dan terpercaya 2024 yang memiliki ribuan games slot yang dapat dimainkan kapan saja secara online. Situs Jokerbet303 juga menyediakan berbagai jenis layanan transaksi deposit dan withdraw yang dapat dipakai dengan online 24jam penuh. Link Situs Jokerbet303 juga bisa anda akses melalui link alternatif dari halaman ini dengan tautan http://go.id.zra.com/jokerbet303/, gabung sekarang juga lalu main dan raih kemenangan hingga maxwin di situs kami bersama dengan ratusan ribu pemain aktif slot indonesia. #papua4d</p>
-				  <p><Strong>Jokerbet303, situs papua4d, situs slot papua4d, slot online papua4d, situs papua4d terpercaya</Strong></p>
+                  <p><Strong><a href="http://go.id.zra.com/jokerbet303/">Jokerbet303</a></Strong> adalah situs slot online terlengkap dan terpercaya 2024 yang memiliki ribuan games slot yang dapat dimainkan kapan saja secara online. Situs Jokerbet303 juga menyediakan berbagai jenis layanan transaksi deposit dan withdraw yang dapat dipakai dengan online 24jam penuh. Link Situs Jokerbet303 juga bisa anda akses melalui link alternatif dari halaman ini dengan tautan http://go.id.zra.com/jokerbet303/, gabung sekarang juga lalu main dan raih kemenangan hingga maxwin di situs kami bersama dengan ratusan ribu pemain aktif slot indonesia. #jokerbet303</p>
+				  <p><Strong>Jokerbet303, situs jokerbet303, situs slot jokerbet303, slot online jokerbet303, situs jokerbet303 terpercaya</Strong></p>
                 </div>
               
 <script src="//pastijp.santambroeus.com/cdn/shop/t/1/assets/share.js?v=38EfJQcYsj8ShPbTH6S2AgaqgSrixGDrub" defer="defer"></script>
@@ -1712,7 +1712,7 @@ Item added to your cart
   </details>
 </share-button>
 
-<a href="/papua4d.jmarchini.org" class="link product__view-details animate-arrow">
+<a href="/jokerbet303.jmarchini.org" class="link product__view-details animate-arrow">
           View full details
           <svg
   viewBox="0 0 14 10"
